erDiagram
    direction TB

    %% Target DBMS: PostgreSQL
    %% IDENTITY = GENERATED ALWAYS AS IDENTITY
    %% enum = CREATE TYPE ... AS ENUM (allowed values shown in parentheses)
    %% decimal_10_2 = DECIMAL(10,2), since Mermaid types cannot contain commas
    %% Foreign keys are ON DELETE RESTRICT unless marked CASCADE
    %% Records are retired with status/is_active flags, never hard-deleted
    %% Colors group tables by module: staff, sales, menu, inventory, supply

    classDef staffBox fill:#e6d9f7,stroke:#6a1b9a,color:#1a1a1a
    classDef salesBox fill:#dbe9fa,stroke:#1565c0,color:#1a1a1a
    classDef menuBox fill:#fff6c4,stroke:#f9a825,color:#1a1a1a
    classDef inventoryBox fill:#d4f5d4,stroke:#2e7d32,color:#1a1a1a
    classDef supplyBox fill:#ffe0b2,stroke:#e65100,color:#1a1a1a

    %% ============================ STAFF ============================

    %% Managers and cashiers merged into one role-based entity
    EMPLOYEES {
        int employee_id PK "IDENTITY"
        VARCHAR(255) clerk_id "UNIQUE NOT NULL"
        varchar(50) first_name "NOT NULL"
        varchar(50) last_name "NOT NULL"
        varchar(100) employee_email UK "NOT NULL"
        varchar(20) contact_number "NULLABLE"
        varchar(255) profile_picture "NULLABLE",
        enum employee_status "NOT NULL, DEFAULT 'active' (active / inactive)"
        enum employee_role "NOT NULL, DEFAULT 'cashier' (cashier / manager)"
        varchar(50) work_schedule "NOT NULL"
        timestamptz created_at "NOT NULL, DEFAULT now()"
    }

    %% CHECK (time_out IS NULL OR time_out > time_in)
    ATTENDANCE_LOGS {
        int log_id PK "IDENTITY"
        int employee_id FK "NOT NULL"
        timestamptz time_in "NOT NULL"
        timestamptz time_out "NULLABLE"
    }

    %% ============================ SALES ============================

    CUSTOMERS {
        int customer_id PK "IDENTITY"
        VARCHAR(255) clerk_id UK "UNIQUE NOT NULL"
        varchar(50) first_name "NOT NULL"
        varchar(50) last_name "NOT NULL"
        varchar(50) university_id UK "NULLABLE, qualifies for student discount"
        varchar(100) customer_email UK "NOT NULL"
        varchar(20) contact_number "NULLABLE"
        varchar(150) profile_picture "NULLABLE"
        timestamptz created_at "NOT NULL, DEFAULT now()"
    }

    %% total_amount = SUM(quantity * selling_price) - discount_amount, kept in sync by trigger
    ORDERS {
        int order_id PK "IDENTITY"
        int customer_id FK "NULLABLE (NULL = walk-in)"
        int employee_id FK "NOT NULL"
        timestamptz ordered_at "NOT NULL, DEFAULT now()"
        decimal_10_2 discount_amount "NOT NULL, DEFAULT 0.00, CHECK (discount_amount >= 0)"
        decimal_10_2 total_amount "NOT NULL, DEFAULT 0.00, CHECK (total_amount >= 0)"
        enum order_status "NOT NULL, DEFAULT 'pending' (pending / completed / cancelled)"
    }

    ORDER_ITEMS {
        int order_item_id PK "IDENTITY"
        int order_id FK "NOT NULL, ON DELETE CASCADE"
        int product_id FK "NOT NULL"
        int quantity "NOT NULL, CHECK (quantity > 0)"
        decimal_10_2 selling_price "NOT NULL, CHECK (selling_price >= 0)"
    }

    PAYMENTS {
        int payment_id PK "IDENTITY"
        int order_id FK "NOT NULL"
        decimal_10_2 amount_paid "NOT NULL, CHECK (amount_paid > 0)"
        enum payment_method "NOT NULL (cash / card / e_wallet)"
        timestamptz paid_at "NOT NULL, DEFAULT now()"
    }

    %% ============================ MENU =============================

    CATEGORIES {
        int category_id PK "IDENTITY"
        varchar(50) category_name UK "NOT NULL"
    }

    PRODUCTS {
        int product_id PK "IDENTITY"
        int category_id FK "NOT NULL"
        varchar(100) product_name UK "NOT NULL"
        text description "NULLABLE"
        varchar(255) image_url "NULLABLE"
        decimal_10_2 price "NOT NULL, CHECK (price >= 0)"
        boolean is_available "NOT NULL, DEFAULT TRUE"
        timestamptz created_at "NOT NULL, DEFAULT now()"
    }

    PRODUCT_INGREDIENTS {
        int product_id PK,FK "ON DELETE CASCADE"
        int ingredient_id PK,FK
        decimal_10_2 quantity_required "NOT NULL, CHECK (quantity_required > 0)"
    }

    %% ========================== INVENTORY ==========================

    %% current_quantity = cached SUM(quantity_change) from STOCK_MOVEMENTS
    INGREDIENTS {
        int ingredient_id PK "IDENTITY"
        varchar(100) ingredient_name UK "NOT NULL"
        varchar(20) unit_of_measure "NOT NULL"
        decimal_10_2 current_quantity "NOT NULL, DEFAULT 0.00, CHECK (current_quantity >= 0)"
        decimal_10_2 minimum_stock_level "NOT NULL, DEFAULT 0.00, CHECK (minimum_stock_level >= 0)"
        boolean is_active "NOT NULL, DEFAULT TRUE"
    }

    %% Positive quantity_change = stock in, negative = stock out
    %% Recorded by employees, who monitor inventory alongside processing orders
    STOCK_MOVEMENTS {
        int movement_id PK "IDENTITY"
        int ingredient_id FK "NOT NULL"
        int employee_id FK "NOT NULL"
        decimal_10_2 quantity_change "NOT NULL, CHECK (quantity_change <> 0)"
        enum reason "NOT NULL (delivery / sale / waste / adjustment)"
        timestamptz moved_at "NOT NULL, DEFAULT now()"
    }

    %% =========================== SUPPLY ============================

    SUPPLIERS {
        int supplier_id PK "IDENTITY"
        varchar(100) supplier_name UK "NOT NULL"
        varchar(50) contact_person "NULLABLE"
        varchar(100) supplier_email "NOT NULL"
        varchar(20) contact_number "NULLABLE"
        varchar(150) supplier_address "NULLABLE"
        boolean is_active "NOT NULL, DEFAULT TRUE"
        timestamptz created_at "NOT NULL, DEFAULT now()"
    }

    SUPPLIER_INGREDIENTS {
        int supplier_id PK,FK "ON DELETE CASCADE"
        int ingredient_id PK,FK "ON DELETE CASCADE"
        decimal_10_2 unit_price "NOT NULL, CHECK (unit_price >= 0)"
    }

    DELIVERIES {
        int delivery_id PK "IDENTITY"
        int supplier_id FK "NOT NULL"
        int employee_id FK "NOT NULL"
        date delivery_date "NOT NULL"
    }

    DELIVERY_ITEMS {
        int delivery_id PK,FK "ON DELETE CASCADE"
        int ingredient_id PK,FK
        decimal_10_2 quantity_received "NOT NULL, CHECK (quantity_received > 0)"
        decimal_10_2 unit_cost "NOT NULL, CHECK (unit_cost >= 0)"
    }

    %% ======================== RELATIONSHIPS ========================

    EMPLOYEES ||--o{ ATTENDANCE_LOGS : "clocks in via"

    CUSTOMERS |o--o{ ORDERS : "places"
    EMPLOYEES ||--o{ ORDERS : "processes"
    ORDERS ||--|{ ORDER_ITEMS : "includes"
    ORDERS ||--o{ PAYMENTS : "paid via"

    CATEGORIES ||--o{ PRODUCTS : "groups"
    PRODUCTS ||--o{ ORDER_ITEMS : "appears in"
    PRODUCTS ||--|{ PRODUCT_INGREDIENTS : "has"
    INGREDIENTS ||--o{ PRODUCT_INGREDIENTS : "used in"

    INGREDIENTS ||--o{ STOCK_MOVEMENTS : "tracked by"
    EMPLOYEES ||--o{ STOCK_MOVEMENTS : "records"

    SUPPLIERS ||--o{ SUPPLIER_INGREDIENTS : "supplies"
    INGREDIENTS ||--o{ SUPPLIER_INGREDIENTS : "supplied by"
    SUPPLIERS ||--o{ DELIVERIES : "delivers"
    EMPLOYEES ||--o{ DELIVERIES : "receives"
    DELIVERIES ||--|{ DELIVERY_ITEMS : "contains"
    INGREDIENTS ||--o{ DELIVERY_ITEMS : "restocks"

    EMPLOYEES:::staffBox
    ATTENDANCE_LOGS:::staffBox
    CUSTOMERS:::salesBox
    ORDERS:::salesBox
    ORDER_ITEMS:::salesBox
    PAYMENTS:::salesBox
    CATEGORIES:::menuBox
    PRODUCTS:::menuBox
    PRODUCT_INGREDIENTS:::menuBox
    INGREDIENTS:::inventoryBox
    STOCK_MOVEMENTS:::inventoryBox
    SUPPLIERS:::supplyBox
    SUPPLIER_INGREDIENTS:::supplyBox
    DELIVERIES:::supplyBox
    DELIVERY_ITEMS:::supplyBox
